fixed: restaurant routes
