# public/swagger.json
@@ -15,6 +15,58 @@
 				],
 				"type": "string"
 			},
+			"RestaurantValidation": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"type": {
+						"$ref": "#/components/schemas/RestaurantType"
+					},
+					"address": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"email",
+					"type",
+					"address",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UpdateRestaurantValidation": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"type": {
+						"$ref": "#/components/schemas/RestaurantType"
+					},
+					"address": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"type",
+					"address",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"RestaurantEnitity": {
 				"properties": {
 					"id": {
@@ -151,43 +203,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"RestaurantValidation": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"type": {
-						"$ref": "#/components/schemas/RestaurantType"
-					},
-					"address": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name",
-					"email",
-					"type",
-					"address",
-					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_RestaurantEnitity.Exclude_keyofRestaurantEnitity.password__": {
-				"properties": {},
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_RestaurantEnitity.password_": {
-				"$ref": "#/components/schemas/Pick_RestaurantEnitity.Exclude_keyofRestaurantEnitity.password__",
-				"description": "Construct a type with the properties of T except for those in type K."
 			}
 		},
 		"securitySchemes": {}
@@ -202,20 +217,55 @@
 	"paths": {
 		"/restaurant": {
 			"post": {
-				"operationId": "RegisterRestaurant",
+				"operationId": "Register",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/RestaurantEnitity"
+									"properties": {
+										"deletedAt": {
+											"type": "string"
+										},
+										"updatedAt": {
+											"type": "string"
+										},
+										"createdAt": {
+											"type": "string"
+										},
+										"id": {
+											"type": "string"
+										},
+										"address": {
+											"type": "string"
+										},
+										"type": {
+											"$ref": "#/components/schemas/RestaurantType"
+										},
+										"email": {
+											"type": "string"
+										},
+										"name": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"deletedAt",
+										"updatedAt",
+										"createdAt",
+										"id",
+										"address",
+										"type",
+										"email",
+										"name"
+									],
+									"type": "object"
 								}
 							}
 						}
 					}
 				},
-				"summary": "inserts new restaurant",
 				"tags": [
 					"Restaurant"
 				],
@@ -232,6 +282,36 @@
 					}
 				}
 			},
+			"patch": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UpdateRestaurantValidation"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Restaurant"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateRestaurantValidation"
+							}
+						}
+					}
+				}
+			},
 			"get": {
 				"operationId": "GetAllRestaurant",
 				"responses": {
@@ -241,7 +321,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/Omit_RestaurantEnitity.password_"
+										"$ref": "#/components/schemas/RestaurantEnitity"
 									},
 									"type": "array"
 								}
@@ -249,7 +329,6 @@
 						}
 					}
 				},
-				"summary": "get all restaurant",
 				"tags": [
 					"Restaurant"
 				],
@@ -258,21 +337,28 @@
 			}
 		},
 		"/restaurant/{id}": {
-			"get": {
-				"operationId": "GetRestaruantById",
+			"delete": {
+				"operationId": "DeleteRestaurant",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Omit_RestaurantEnitity.password_"
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
 					}
 				},
-				"summary": "get restaurant by id",
 				"tags": [
 					"Restaurant"
 				],
