# src/entities/category/category.entity.ts
@@ -4,17 +4,18 @@ import { RestaurantEnitity } from "../restaurant/restaurant.entity";
 import { ProductEntity } from "../product/product.entity";
 
 @Entity("Category")
-export class CategoryEntity extends CommonEnitity{
+export class CategoryEntity extends CommonEnitity {
+  @Column({ name: "name", nullable: false })
+  name: string;
 
-    @Column({name:"name", nullable:false})
-    readonly name:string;
+  @Column({ name: "description", type: "text", nullable: false })
+  description: string;
 
-    @Column({name:"description", type:"text", nullable:false})
-    readonly description:string;
+  @ManyToOne(() => RestaurantEnitity, (res) => res.categories, {
+    onDelete: "CASCADE",
+  })
+  restaurant: RestaurantEnitity;
 
-    @ManyToOne(()=>RestaurantEnitity, (res)=>res.categories,{cascade:true})
-    restaurant:RestaurantEnitity
-
-    @OneToMany(()=>ProductEntity, (product)=>product.category)
-    products:ProductEntity
+  @OneToMany(() => ProductEntity, (product) => product.category)
+  products: ProductEntity;
 }
